// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay closed 1`] = `
<div
  background="#000"
  class="Overlay__Div-sc-7f8d3g-0 bZCSmX"
  duration="500ms"
  opacity="0.2"
/>
`;

exports[`Overlay custom color 1`] = `
<div
  background="ccc"
  class="Overlay__Div-sc-7f8d3g-0 kIpARK"
  duration="500ms"
  opacity="0.2"
/>
`;

exports[`Overlay custom duration 1`] = `
<div
  background="#000"
  class="Overlay__Div-sc-7f8d3g-0 hEDJDf"
  duration="1s"
  opacity="0.2"
/>
`;

exports[`Overlay custom opacity 1`] = `
<div
  background="#000"
  class="Overlay__Div-sc-7f8d3g-0 hXrVnd"
  duration="500ms"
  opacity="0.5"
/>
`;

exports[`Overlay default 1`] = `
<div
  background="#000"
  class="Overlay__Div-sc-7f8d3g-0 fABasi"
  duration="500ms"
  opacity="0.2"
/>
`;
